--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <br>
       Mandela was a controversial figure for much of his life. Although critics on the right denounced him as a communist terrorist and those on the far left deemed him too eager to negotiate and reconcile with apartheid's supporters, he gained international acclaim for his activism. Widely regarded as an icon of democracy and social justice, he received more than 250 honours, including the Nobel Peace Prize. He is held in deep respect within South Africa, where he is often referred to by his Thembu clan name, Madiba, and described as the "Father of the Nation".
 
-      Click here to view more <a href="#" target="_blank">cat photos</a>
+      Click here to learn more about <a href="https://en.wikipedia.org/wiki/Nelson_Mandela" target="_blank">Nelson Mandela</a>
     </p>
 
   </div>
