--- a/index.html
+++ b/index.html
@@ -3,13 +3,16 @@
 <meta charset="UTF-8">
 <head>
   <link rel="stylesheet" href="style.css">
+<!--<link href="https://fonts.googleapis.com/css?family=Imbue|Roboto" rel="stylesheet">-->
+  <link rel="stylesheet" href= "https://fonts.googleapis.com/css?family=Fraunces:ital,wght@1,200|Roboto:ital,wght@0,100;1,100">
+
 </head>
 <title id="title">Tribute Page of Nelson Mandela</title>
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<body>
+<main id="main">
 
   <div id="img-div">
-    <img id="image_mandela" src="images/Mandela.jpg" id="image-caption" alt="Mandela">    
+    <img id="image-mandela" src="images/Mandela.jpg" id="image-caption" alt="Mandela">    
   </div>
   <div id="tribute-info">
     
@@ -29,5 +32,5 @@
     </p>
 
   </div>
-</body>
+</main>
 </html>
